Fix unexpected word-break of BtnPrimary on Firefox

--- a/assets/stylus/mixins.styl
+++ b/assets/stylus/mixins.styl
@@ -47,6 +47,7 @@ btn-primary()
 			background-color $blue
 			transform translateY(.35em)
 	span
+		display block
+		margin-right -.2em
 		font-size 20px
 		letter-spacing .2em
-		margin-right -.2em
